fix thumb location when clicking the scrollbar the first time

--- a/src/ng-tiny-scrollbar.less
+++ b/src/ng-tiny-scrollbar.less
@@ -24,7 +24,7 @@
   transition: 0.6s ease-in-out opacity;
   height: 100%;
 
-  &.disable { display: none; }
+  &.disable { visibility: hidden; }
 
   &.visible {
     opacity: 1 !important;
